--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@homebridge/homebridge-bme280",
+
+  "name": "homebridge-bme280",
   "version": "1.2.4",
   "description": "BME280 temperature/humidity/pressure sensor bridge for Homebridge: https://github.com/nfarina/homebridge\"",
   "main": "sensor.js",
@@ -8,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/homebridge/homebridge-bme280.git"
+    "url": "git://github.com/rxseger/homebridge-bme280.git"
   },
   "keywords": [
     "homebridge-plugin",
@@ -21,21 +22,18 @@
   "author": "rxserger",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/homebridge/homebridge-bme280/issues"
+    "url": "https://github.com/rxseger/homebridge-bme280/issues"
   },
   "engines": {
     "node": ">=6.0.0",
     "homebridge": ">=0.2.0"
   },
-  "homepage": "https://github.com/homebridge/homebridge-bme280#readme",
+  "homepage": "https://github.com/rxseger/homebridge-bme280#readme",
   "dependencies": {
     "bme280-sensor": "^0.0.8",
     "debug": "^2.2.0",
     "mcuiot-logger": "^0.0.7",
     "moment": "^2.18.1",
     "fakegato-history": "^0.4.0"
-  },
-  "directories": {
-    "lib": "lib"
   }
 }
